--- a/HTML/index.html
+++ b/HTML/index.html
@@ -136,11 +136,11 @@
                 <h2 class="accordion-header" >
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                        aria-controls="panelsStayOpen-collapseOne" style="background-color:rgb(255, 68, 0); color:rgb(0, 0, 0)">
+                        aria-controls="panelsStayOpen-collapseOne" style="background-color:rgb(255, 255, 255); color:rgb(0, 0, 0)">
                         Ubicacion de nuestros depositos
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" style="background-color:rgb(255, 106, 0);">
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" style="background-color:rgb(255, 255, 255);">
                     <div class="accordion-body">
                         <ul>
                             <li>Salta: Avenida Durañona - Parque industrial</li>
@@ -155,11 +155,11 @@
                 <h2 class="accordion-header" >
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseTwo" style="background-color:rgb(255, 68, 0); color:rgb(0, 0, 0)">
+                        aria-controls="panelsStayOpen-collapseTwo" style="background-color:rgb(255, 255, 255); color:rgb(0, 0, 0)">
                         ¿Porque colodrap?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" style="background-color:rgb(255, 106, 0); ">
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" style="background-color:rgb(255, 255, 255); ">
                     <div class="accordion-body">
                         Somos una empresa destinada a <strong> conectar necesidades con eficiencia, inmediatez y
                             confiabilidad </strong>, por lo que estamos para brindarles soluciones logísticas con estas
@@ -175,11 +175,11 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseThree" style="background-color:rgb(255, 68, 0); color:rgb(0, 0, 0)">
+                        aria-controls="panelsStayOpen-collapseThree" style="background-color:rgb(255, 255, 255); color:rgb(0, 0, 0)">
                         Presupuestos online
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" style="background-color:rgb(255, 106, 0);">
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" style="background-color:rgb(255, 255, 255);">
                     <div class="accordion-body">
                         <strong>Deberan responder los siguientes parametros:</strong>
                         <ul>
@@ -356,7 +356,44 @@
             crossorigin="anonymous"></script>
 
     </footer>
-
+    <div class="accordion" id="">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Accordion Item #1
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
