--- a/HTML/index.html
+++ b/HTML/index.html
@@ -75,6 +75,7 @@
                                 <h5>Colodrap</h5>
                                 <p>Nos adaptamos a las necesidades de nuestros clientes.</p>
                             </div>
+                            
                         </div>
                         <div class="carousel-item">
                             <img src="/img/img-2.jpg" class="d-block w-100 floating-image img-fluid" alt="..."
@@ -105,6 +106,23 @@
                     </button>
                 </div>
             </div>
+        </div>
+        <div class="animation">
+            <svg class="fusion-waves-opacity-candy" fill="#ff4604" xmlns="http://www.w3.org/2000/svg" version="1.1"
+                width="100%" viewBox="0 1 1024 216" preserveAspectRatio="none">
+                <path class="st0"
+                    d="M1024.1.4H.1L0 105.6c14.6 3.2 30.2 5.8 47.1 7.6 178.6 19.6 279.5-56.8 464.3-41.3 206.5 17.2 248.4 128.8 455 143.8 19 1.3 38.3.2 57.7-.3V.4z">
+                </path>
+                <path class="st1"
+                    d="M1024.1 196.4V.256H.1V80C22.8 86.4 48 91.4 76.3 94.6c178.6 19.8 272.2-53.9 457.1-38.4C740 73.4 730.7 180.9 937.3 196c27.2 2 56.6 2 86.8.4z">
+                </path>
+                <path class="st2"
+                    d="M1024.1.256H.1V36c45.1 15.4 95.2 27.7 150 33.7 178.6 19.8 220.6-46.8 405.4-31.3 206.6 17.2 197.8 114.7 404.4 129.7 20.4 1.5 42 2 64.2 1.7V.256z">
+                </path>
+                <path class="st3"
+                    d="M1024.1.156H.1V3.2c50.8 17.1 108.7 30.7 172.7 37.9 178.6 19.8 220-36.8 404.9-21.3 206.6 17.2 228 126.5 434.5 141.6 3.9.3 7.9.5 11.9.7V.156z">
+                </path>
+            </svg>
         </div>
     </section>
 
