--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/">
+                            <a class="nav-link" href="https://www.facebook.com/profile.php?id=61558214288688">
                                 <svg fill="#000000" width="20px" height="20px" viewBox="0 0 24 24"
                                     xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
                                     <path
@@ -39,7 +39,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://web.whatsapp.com/">
+                            <a class="nav-link" href="https://web.whatsapp.com/3874429948">
                                 <svg fill="#000000" height="18px" width="18px" version="1.1" id="Icon"
                                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                     viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
@@ -280,55 +280,69 @@
     <div class="mt-0">
         <div class="card text-center">
 
-            <div style="background-color: rgb(255, 68, 0);;">
+            <div style="background-color: rgb(255, 68, 0);">
                 <div class="card-body">
                     <h1 class="card-title">Servicios</h1>
                 </div>
-                <div class="card-footer text-body-secondary">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="card service-card">
-                                <img src="/img/img-carga-servicio.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h4 class="card-text"><strong>TRANSPORTE DE CARGAS</strong></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card service-card">
-                                <img src="/img/img-carga-servicio.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h4 class="card-text"><strong>TRANSPORTE DE CARGAS</strong></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card service-card">
-                                <img src="/img/img-carga-servicio.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h4 class="card-text"><strong>TRANSPORTE DE CARGAS</strong></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card service-card">
-                                <img src="/img/img-carga-servicio.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h4 class="card-text"><strong>TRANSPORTE DE CARGAS</strong></h4>
-                                </div>
-                            </div>
-                        </div>
+                <div class="row align-items-end " style="margin: 50px;">
+                    <h1 class="mb-5 mt-5">Algunos de nuestros servicios</h1>
 
+                    <div class="col">
+                        <div class="card bg-dark cards-services" style="width: 18rem; border-radius: 20px;">
+                            <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
+                                style="border-radius: 8%;">
+                            <div class="card-body">
+                                <h2 class="card-title">Publicidad Remisera</h2>
+                                <p class="card-text">Publicidad destinada a una famosa remisera en la zona sur en donde
+                                    la clienta solicitaba estilos y una fuerte personalidad</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col ">
+                        <div class="card bg-dark cards-services" style="width: 18rem; border-radius: 20px;">
+                            <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
+                                style="border-radius: 8%;">
+                            <div class="card-body">
+                                <h2 class="card-title">Publicidad Libreria</h2>
+                                <p class="card-text">Publicidad destinada a libreria Lerma en donde la clienta solicito
+                                    lucidez y espontaneidad a la hora de actuar</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card bg-dark" style="width: 18rem; border-radius: 20px;">
+                            <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
+                                style="border-radius: 8%;">
+                            <div class="card-body">
+                                <h2 class="card-title">Publicidad Marketing</h2>
+                                <p class="card-text">Publicidad destinada a una empresa de marketing en donde se llevo a
+                                    cabo el desarrollo de una publicidad negligente.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card bg-dark" style="width: 18rem; border-radius: 20px;">
+                            <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
+                                style="border-radius: 8%;">
+                            <div class="card-body">
+                                <h2 class="card-title">Publicidad Marketing</h2>
+                                <p class="card-text">Publicidad destinada a una empresa de marketing en donde se llevo a
+                                    cabo el desarrollo de una publicidad negligente.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div>
-
-                    <h4 class="text-center mt-5" style="padding: 50px;">Ofrecemos envíos de larga distancia,
-                        zonificación, distribución, cargas
-                        parciales o completas, retiros y entregas puerta a puerta. Nuestro servicio de logística incluye
-                        almacenaje, alquiler de espacios exclusivos, administración de stocks y más.</h4>
-                </div>
+                <div style="display: flex; align-items: center; justify-content: center; height: 40vh;">
+                    <h4 class="text-center mt-5" style="padding: 50px;">
+                      Ofrecemos envíos de larga distancia, zonificación, distribución, cargas
+                      parciales o completas, retiros y entregas puerta a puerta. Nuestro servicio de logística incluye
+                      almacenaje, alquiler de espacios exclusivos, administración de stocks y más.
+                    </h4>
+                  </div>
+                  
             </div>
             <div class="mb-5">
                 <svg class="fusion-waves-opacity-candy" fill="#ff4604" xmlns="http://www.w3.org/2000/svg" version="1.1"
