--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <div class="container-fluid footer-resp a mt-5 bg-orange">
                     <div class="row p-3  text-black">
 
-                        <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="col-xs-12 col-md-6 col-lg-3 div-img">
                             <div class="card bg-dark cards-services">
                                 <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
                                     style="border-radius: 8%;">
@@ -384,7 +384,7 @@
                             </div>
 
                         </div>
-                        <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="col-xs-12 col-md-6 col-lg-3 div-img">
                             <div class="card bg-dark cards-services">
                                 <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
                                     style="border-radius: 8%;">
@@ -396,7 +396,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="col-xs-12 col-md-6 col-lg-3 div-img" >
                             <div class="card bg-dark cards-services">
                                 <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
                                     style="border-radius: 8%;">
@@ -409,8 +409,8 @@
                             </div>
 
 
-                        </div>
-                        <div class="col-xs-12 col-md-6 col-lg-3">
+                        </div> 
+                        <div class="col-xs-12 col-md-6 col-lg-3 div-img">
                             <div class="card bg-dark cards-services">
                                 <img src="img/img-carga-servicio.jpg" class="card-img-top" alt="img"
                                     style="border-radius: 8%;">
